# coral

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  RsyncServer.h  license_manager.rb
examples/rpc/search_service/: .gitignore  CMakeLists.txt  Rakefile  makefile  rakefile  search_service  search_service.cpp
examples/rpc/search_service/rpc_gen_temp/: .gitignore
examples/rsync/cli_utility/client/: .gitignore  CMakeLists.txt  makefile.original  original.rsync_client.cpp  rsync_client  rsync_client.cpp
examples/rsync/cli_utility/server/: .gitignore  CMakeLists.txt  makefile  makefile.original  original.rsync_server.cpp  rsync_server  rsync_server.cpp
lib/base/: .gitignore  CMakeLists.txt  makefile
lib/core/: .gitignore  CMakeLists.txt
lib/netapp/: .gitignore  CMakeLists.txt  makefile
lib/rpc/: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  makefile
lib/rsync/: .gitignore  CMakeLists.txt  makefile
test/core/: .gitignore  CMakeLists.txt  OtherLogUser.cpp  OtherLogUser.h  arg_parser_test.cpp  base_type_test.cpp  bufftest  byte_order_test.cpp  circ_buff_test.cpp  core_test_suite  core_test_suite.cpp  date_time_test.cpp  fstest.cpp  hash_table_test.cpp  interactive_command_router_test.cpp  makefile  queuetest.cpp  string_helper_test.cpp  timestamp_test.cpp
test/core/logtestdir/: logtest_trace.llog
test/netapp/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  netapp_test.cpp  netapp_test_suite  netapp_test_suite.cpp  packet_relay_test.cpp  packet_router_test.cpp  serialize_test.cpp
test/netapp/client/: makefile
test/netapp/server/: application_worker_test.h
test/rpc/search_service/: .gitignore  CMakeLists.txt  makefile  rakefile  search  search_service  search_service.cpp
test/rpc/search_service/proto/: tutorial.proto
test/rsync/: .gitignore  CMakeLists.txt  basic_test.cpp  classtest.cpp  end_to_end  end_to_end.cpp  end_to_end_orig.cpp  every_offset.txt  file_system_test.cpp  flow  flowtest.cpp  fs_test.cpp  full_stride.txt  histogram.csv  inst_test  instruction_test.cpp  job_test.cpp  makefile  node_test  node_test.cpp  out.txt  packettest.cpp  packettest_old.cpp  pipeline_benchmark.txt  queues_benchmark.txt  quick_roll.rb  results.txt  rsync_test_helper.h  rsync_test_suite  rsync_test_suite.cpp  rsynctest.cpp  seg_time  seg_time.cpp  segment_test.cpp  segment_times.csv  segmentertest.cpp  unit  unitflow.cpp  worker_test.cpp  worker_v1_benchmark.txt
test/rsync/analysis/: hash_log.csv  hash_log_analysis_2.xlsx
test/rsync/file_sys_test_root/: test_file.txt
test/rsync/file_sys_test_root/.rsync_stage/: 1_stage.test_file.txt
test/rsync/flow.dSYM/Contents/: Info.plist
test/rsync/test_root/: .gitignore  file_a.txt  file_b.txt  hash_log_analysis.xlsx  rakefile  ~$hash_log_analysis_2.xlsx
test/rsync/test_root/client/: instruction_test.cpp
test/rsync/test_root/utils/: comp.rb  gen_files.rb
test/rsync/testfiles/: accel.csv
utils/rpc_generate/: .gitignore  CMakeLists.txt  LiberFileGenerator.cpp  LiberFileGenerator.h  RpcServiceGenerator.cpp  RpcServiceGenerator.h  TODO.txt  command.txt  example.res  field.rb  generateapp.rb  option_hash.rb  parse_helper.rb  pb_message.rb  protoc-gen-coralrpc  rakefile  rpc_generator.cpp  rpc_parameter_list.rb  rpc_resource.rb  rpc_resource_action.rb  rpc_struct.rb  structure.rb  template_collection.rb  test.rb  text_template.rb  text_template_v2.rb
utils/rpc_generate/output_src/: CalculatorAddParamList.cpp  CalculatorAddParamList.h  CalculatorClientStub.cpp  CalculatorClientStub.h  CalculatorDivParamList.cpp  CalculatorDivParamList.h  CalculatorGetnumopsParamList.cpp  CalculatorGetnumopsParamList.h  CalculatorMulParamList.cpp  CalculatorMulParamList.h  CalculatorServerStub.h  CalculatorSubParamList.cpp  CalculatorSubParamList.h  CalculatorWrapper.cpp  CalculatorWrapper.h  CalculatoraddParamListParamList.h  CalculatordivParamListParamList.h  CalculatorgetNumOpsParamListParamList.h  CalculatormulParamListParamList.h  CalculatorsubParamListParamList.h  DatabaseClientStub.cpp  DatabaseClientStub.h  DatabaseCreateParamList.cpp  DatabaseCreateParamList.h  DatabaseDeleteParamList.cpp  DatabaseDeleteParamList.h  DatabaseReadParamList.cpp  DatabaseReadParamList.h  DatabaseServerStub.h  DatabaseUpdateParamList.cpp  DatabaseUpdateParamList.h  DatabaseWrapper.cpp  DatabaseWrapper.h  DatabasecreateParamListParamList.h  DatabasedeleteParamListParamList.h  DatabasedestroyParamList.cpp  DatabasedestroyParamList.h  DatabasereadParamListParamList.h  DatabaseupdateParamListParamList.h  UserAttributes.cpp  (+1 more)
utils/rpc_generate/proto/: tutorial.proto
utils/rpc_generate/resources/: example.res
utils/rpc_generate/source/: definition_parser.rb  definition_parser_test.rb  generateapp.rb  test_defs.h  tutorial.proto
utils/rpc_generate/source/block_parser/: block_parser.rb  block_parser_2.rb  block_parser_test.rb  block_token_test.rb  cast_test.rb  definition_parser.rb  definition_parser_test.rb  definition_token_test.rb  out.txt  remove_comments_test.rb  test_defs.h  test_defs_2.h  test_defs_2_out.h  test_defs_out.h  tokenizer.rb
utils/rpc_generate/source/liber_gen/: makefile  (+8 more)
utils/rpc_generate/templates/: client_stub_action_cpp.template  client_stub_action_cpp_ne.template  client_stub_resource_cpp.template  client_stub_resource_h.template  instance_wrapper_action_cpp.template  instance_wrapper_cpp.template  instance_wrapper_generated_action_cpp.template  instance_wrapper_h.template  instance_wrapper_user_action_cpp.template  instance_wrapper_user_cpp.template  object_cpp.template  object_h.template  parameter_list_cpp.template  parameter_list_h.template  parameter_list_marshall_cpp.template  parameter_list_return_cpp.template  server_resource_stub_cpp.template  server_resource_stub_h.template
utils/rpc_generate/test_out/: .gitignore  SearchServiceAddAction.cpp  SearchServiceAddAction.h  SearchServiceClientStub.cpp  SearchServiceClientStub.h  SearchServiceSearchAction.cpp  SearchServiceSearchAction.h  SearchServiceServerStub.cpp  SearchServiceServerStub.h  tutorial.pb.cc
(+992 files in other folders)
